--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "qr",
   "version": "0.1.0",
-   "author": "Mike Awad",
+  "author": "Mike Awad",
   "private": true,
-   "keywords": [ "Next.Js", "QR", "SQLite", "TypeScript", "tailwindcss" ],
+  "keywords": [
+    "Next.Js",
+    "QR",
+    "SQLite",
+    "TypeScript",
+    "tailwindcss"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,19 +17,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.1.3",
+    "next-qrcode": "^2.5.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "typescript": "^5"
   }
 }
