--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "formik": "^2.4.5",
     "next": "14.1.3",
     "next-qrcode": "^2.5.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
