--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "next": "14.1.3",
     "next-qrcode": "^2.5.1",
     "react": "^18",
